--- a/Bolos.html
+++ b/Bolos.html
@@ -16,7 +16,7 @@
 </nav>
 <main>
     <picture>
-        <img src="./img/images 1.svg" alt="corpo do site" />
+        <img src="./img/images 1.svg" alt="corp do site" />
         <h1>Bolo de chocolate com calda de brigadeiro</h1>
         <img src="./img/images (1) 1.svg" alt="corpo do site" />
         <h1>Bolo de beijinho</h1>
