--- a/Site.html
+++ b/Site.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Receitas da vovó</title>
+    <link href="./css/estilo.css" rel="stylesheet">
 </head>
 </body>
 <header>
@@ -14,7 +15,7 @@
   <h1> Receitas da Vovó</h1>
 </header>
 <nav> 
-    <u>
+    <ul>
         <li>
         <a href="Bolos.html">Bolos</a>
       </li>
@@ -24,12 +25,8 @@
         <li>
           <a href="Molhos.html">Molhos</a>
         </li>
-        <li>Doces</li>
-        <li>Bebidas</li>
-        <li>Saladas</li>
-        <li>Massas e pães</li>
-        <li> Videos</li>
-    </u>
+      
+    </ul>
 </nav>
 <main> 
     <img src="./img/bolos e tortas 1.svg" alt="corpo do site" />
