--- a/Bolos.html
+++ b/Bolos.html
@@ -17,14 +17,18 @@
 </nav>
 <main>
     <picture>
+    <div>
         <img src="./img/images 1.svg" alt="corpo do site" />
         <h1>Bolo de chocolate com calda de brigadeiro</h1>
         <img src="./img/images (1) 1.svg" alt="corpo do site" />
         <h1>Bolo de beijinho</h1>
+        </div>
+          <div>
         <img src="./img/bolo-torta-limao 1.svg" alt="corpo do site" />
         <h1>Torta de Limão</h1>
         <img src="./img/unnamed 1.svg" alt="corpo do site" />
         <h1>Torta de Morango</h1>
+      </div>
     </picture> 
     
 </main>
