--- a/Carnes.html
+++ b/Carnes.html
@@ -17,14 +17,18 @@
 </nav>
 <main>
     <picture>
+      <div>
         <img src="./img/picadinho.svg" alt="corpo do site" />
         <h1>Picadinho com batata</h1>
         <img src="./img/Costela-na-Panela-de-Pressão-650x650 1.svg" alt="corpo do site" />
         <h1>Costelinha na panela de pressão</h1>
+      </div>  
+      <div>
         <img src="./img/abacaxi.svg" alt="corpo do site" />
         <h1>Lombo com abacaxi</h1>
         <img src="./img/cupim_assado_no_forno_5746_orig 1.svg" alt="corpo do site" />
         <h1>Cupim no forno</h1>
+      </div>  
     </picture> 
     
 </main>
