--- a/Molhos.html
+++ b/Molhos.html
@@ -17,14 +17,18 @@
 </nav>
 <main>
     <picture>
+      <div>
         <img src="./img/img_molho_de_maracuja_2059_orig 1.svg" alt="corpo do site" />
         <h1>Molho de Maracuja</h1>
         <img src="./img/molho_de_mostarda 1 el.svg" alt="corpo do site" />
         <h1>Molho de Mostarda com mel</h1>
+      </div>
+      <div>
         <img src="./img/11501_original 1.svg" alt="corpo  do site" />
         <h1>Molho de Mostarda</h1>
         <img src="./img/alho.svg" alt="corpo do site" />
         <h1>Molho de Alho</h1>
+      </div>
     </picture> 
     
 </main>
