--- a/Site.html
+++ b/Site.html
@@ -29,12 +29,17 @@
     </ul>
 </nav>
 <main> 
-    <img src="./img/bolos e tortas 1.svg" alt="corpo do site" />
+  <div>
+   <img src="./img/bolos e tortas 1.svg" alt="corpo do site" />
     <img src="./img/carnes 1.svg" alt="corpo do site" />
     <img src="./img/doces 1.svg" alt="corpo do site" />
+  </div>
+    <div>
     <img src="./img/salada 1.svg" alt="corpo do site" />
     <img src="./img/paes-massas 1.svg" alt="corpo do site" />
      <img src="./img/cinco-drinks-que-casam-perfeitamente-com-churrasco 1.svg" alt="corpodo site" />
+     />
+     <div  >
 </main>
 <footer>
     <div>&copy; COPYLEFT</div>
@@ -44,4 +49,3 @@
           </picture>
 </footer>
 <body.>
-<
